@@ -1,5 +1,10 @@
 2007-02-10  David Trowbridge  <trowbrds@gmail.com>
 
+	* src/fe-gnome/preferences.c:
+	  - Tighten things up a bit more.
+
+2007-02-10  David Trowbridge  <trowbrds@gmail.com>
+
 	* src/fe-gnome/preferences-page-dcc.c:
 	* src/fe-gnome/preferences-page-dcc.h:
 	  - Clean up some ugly code.
